<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main_index"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/about_app_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/about_us_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="72dp"
            android:fontFamily="@font/alex_brush"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/about_app_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/contact_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contact_us"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/about_us_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/alex_brush"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="@color/colorPrimaryDark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t6"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t13"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t3"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t2"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t11"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t11"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/t1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/t8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t8"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/t12"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t12"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t4"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t5"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t9"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/t20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t20"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t7"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t17"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t16"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />

            <Button
                android:id="@+id/t18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t18"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t10"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                android:text="@string/t10"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/t14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t14"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t19"
                android:gravity="start"
                android:fontFamily="@font/artifika"
                android:padding="15sp"
                />
            <Button
                android:id="@+id/t15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:layout_marginTop="10sp"
                android:text="@string/t15"
                android:fontFamily="@font/artifika"
                android:gravity="start"
                android:padding="15sp"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>